<resources>
    <string name="app_name">LoadApp</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_a_type_safe_http_client_for_android_and_java">Retrofit - A type-safe HTTP client for Android and Java</string>
    <string name="download">Download</string>
    <string name="ok">Ok</string>
    <string name="app_description">Download files from Internet</string>
    <string name="we_are_loading">We are loading</string>
    <string name="download_notification_channel_description">Download reminders</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_title">Download Complete</string>
    <string name="download_notification_message">Download is now complete. Enjoy!</string>
    <string name="download_notification_action">Check the status</string>
    <string name="status_fail">Fail</string>
    <string name="status_pending">Pending</string>
    <string name="status_running">Running</string>
    <string name="status_paused">Paused</string>
    <string name="status_success">Success</string>
</resources>