<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/fileNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="@dimen/marginDefault"
        android:text="@string/file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="File Name:" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDouble"
        android:layout_marginEnd="@dimen/marginDefault"
        android:ellipsize="end"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileNameLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/fileNameLabelTextView"
        tools:text="Glide - Image Loading Library for Android By Bump Tech" />

    <TextView
        android:id="@+id/statusLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDouble"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@+id/fileNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/fileNameLabelTextView"
        tools:text="Status:" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/fileName"
        app:layout_constraintTop_toTopOf="@+id/statusLabelTextView"
        tools:text="Success" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginEnd="@dimen/marginDefault"
        android:layout_marginBottom="@dimen/marginDefault"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>